# news-trading-terminal

./: .gitignore  README.md  buildspec.yml  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: App.vue  api.js  binance.js  coingecko.js  constants.js  main.js  misc.js
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AccountApiKeys.vue  DebugLogs.vue  EventLogs.vue  LWChart.vue  Log.vue  Main.vue  NewsFeed.vue  NewsFeedSettingsDialog.vue  NewsItem.vue  Positions.vue  TradingButton.vue  TradingButtons.vue  TradingPanel.vue  TradingParameters.vue  TradingSettingsDialog.vue  TradingViewChart.vue
